# ComfyUI-CogVideoXWrapper

./: .gitignore  __init__.py  cogvideo_controlnet.py  context.py  convert_weight_sat2hf.py  custom_cogvideox_transformer_3d.py  embeddings.py  fp8_optimization.py  install-portable.bat  latent_preview.py  lora_utils.py  model_loading.py  mz_enable_vae_encode_tiling.py  mz_gguf_loader.py  nodes.py  nodes_consis_id.py  pipeline_cogvideox.py  pyproject.toml  readme.md  requirements.txt  setup-onediff.bat  utils.py
cogvideox_fun/: autoencoder_magvit.py  fun_pab_transformer_3d.py  lora_utils.py  pipeline_cogvideox_control.py  pipeline_cogvideox_inpaint.py  transformer_3d.py  utils.py
configs/: scheduler_config_2b.json  scheduler_config_5b.json  transformer_config_2b.json  transformer_config_5b.json  transformer_config_I2V_5b.json  vae_config.json
das/: das_nodes.py  motion.py
enhance_a_video/: enhance.py  globals.py
example_workflows/: cogvideox_1_0_5b_I2V_noise_warp_01.json  cogvideox_1_0_5b_T2V_02.json  cogvideox_1_0_5b_interpolation_02.json  cogvideox_Fun_180_orbit_02.json  cut_and_drag_for_noisewarp_01.json
examples/: cogvideo_2b_context_schedule_test_01.json  cogvideo_2b_long_02.json  cogvideo_2b_temporal_tiling_long_01.json  cogvideo_2b_vid2vid_test_example_02.json  cogvideo_5b_temporal_tiling_long_01.json  cogvideo_5b_vid2vid_example_01.json  cogvideo_long_01.json  cogvideo_vid2vid_test_example_01.json  cogvideox_1.0_5b_vid2vid_02.json  cogvideox_1_0_2b_controlnet_02.json  cogvideox_1_0_5b_I2V_02.json  cogvideox_1_0_5b_I2V_Tora_02.json  example_01.json  (+22 more)
(+24 files in other folders)
